# agents

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  go.mod  model.go  platform.agent
.github/: PULL_REQUEST_TEMPLATE.md
agents/fabricops-deepagent/: README.md  agent.yaml  pyproject.toml
agents/fabricops-deepagent/manifests/: configmap.yaml  deployment.yaml  namespace.yaml  serviceaccount.yaml
agents/fabricops-deepagent/policies/: fabricops.rego
agents/fabricops-deepagent/prompts/: system.md
agents/fabricops-deepagent/scripts/: run-local.sh
agents/fabricops-deepagent/src/fabricops_deepagent/: __init__.py  config.py  decision.py  main.py  policy.py
agents/fabricops-deepagent/tests/: test_decision.py
agents/fabricops-deepagent/tools/: allowlist.yaml
blueprints/: cobrowse.agent  coder.agent  iris.agent  logistics.agent  luna.agent  metal.agent
docs/: agent-as-data-operating-model.md  agent-engineering-platform.md  architecture.md  aws-interop.md  benchmarks.md  business-model.md  clients.md  cloudstack-anchor.md  cncf-stack.md  codespaces.md  coding-assistants.md  compliance.md  data-model.md  datamodel.json  datamodel.md  deploy-k3s.md  deployment-checklist.md  design-principles.md  extensions.md  gitops.md  graph.html  handover-agent-research.md  index.md  meters.md  observability.md  operating-models.md  platform-capability-model.md  platform-constitution.md  platform-operating-model.md  platform-principles.md  platform-reference-architecture.md  (+21 more)
(+207 files in other folders)
