[project]
name = "fabricops-deepagent"
version = "0.1.0"
description = "FabricOps DeepAgent runtime for Unboxd Platform VPS operations"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.2.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "kubernetes>=31.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
]

[project.scripts]
fabricops-deepagent = "fabricops_deepagent.main:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
